--- a/DataPlottingAndAnalysis.ipynb
+++ b/DataPlottingAndAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,8 @@
     "# Set max columns\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
-    "DATADIR = '../data/2020'\n",
-    "OTHERDIR = '../data/misc/'\n",
+    "DATADIR = 'data/2020'\n",
+    "OTHERDIR = '/data/misc/'\n",
     "\n",
     "# Set paths\n",
     "DATASET = os.path.join(DATADIR, '2020pp.csv')\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -2394,11 +2394,7 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "from scipy.signal import savgol_filter\n",
     "yhat = savgol_filter(total.V2, 5, 1)"
@@ -2406,11 +2402,7 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "x = np.linspace(0,2*np.pi,100)\n",
     "y = np.sin(x) + np.random.random(100) * 0.8\n",
@@ -2432,22 +2424,14 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "yhat = moving_average(np.array(total.V2))"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "import numpy as np\n",
     "from scipy.ndimage.filters import uniform_filter1d\n",
@@ -2458,22 +2442,14 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "yhat"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "total"
    ]
