--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -202,6 +202,71 @@
   year    = {2020},
 }
 
+@misc{sktime,
+	author = {alan-turing-institute},
+	title = {{sktime}},
+	journal = {GitHub},
+	year = {2021},
+	month = {Feb},
+	note = {[Online; accessed 8. Feb. 2021]},
+	url = {https://github.com/alan-turing-institute/sktime}
+}
+
+@misc{MAPE,
+	author = {Spider Financial, {\relax Info@numxl}. com},
+	title = {{MAPE - Error medio de porcentaje absoluto}},
+	journal = {Centro de ayuda},
+	year = {2021},
+	month = {Mar},
+	note = {[Online; accessed 23. Mar. 2021]},
+	url = {https://support.numxl.com/hc/es/articles/215959443-MAPE-Error-medio-de-porcentaje-absoluto}
+}
+
+@misc{callbacks,
+	author = {Team, Keras},
+	title = {{Keras documentation: Callbacks API}},
+	year = {2021},
+	month = {Mar},
+	note = {[Online; accessed 23. Mar. 2021]},
+	url = {https://keras.io/api/callbacks}
+}
+
+@misc{keras-wiki,
+	author = {{Wikipedia}},
+	title = {{Keras - Wikipedia, la enciclopedia libre}},
+	year = {2020},
+	month = {Aug},
+	note = {[Online; accessed 23. Mar. 2021]},
+	url = {https://es.wikipedia.org/w/index.php?title=Keras&oldid=128778152}
+}
+
+@article{MASE,
+	author = {Ahuja, Ashish},
+	title = {{Mean Absolute Scaled Error (MASE) in Forecasting - Ashish Ahuja - Medium}},
+	journal = {Medium},
+	year = {2021},
+	month = {Jan},
+	publisher = {Medium},
+	url = {https://medium.com/@ashishdce/mean-absolute-scaled-error-mase-in-forecasting-8f3aecc21968}
+}
+
+@misc{gluonts,
+	title = {{GluonTS - Probabilistic Time Series Modeling {\ifmmode---\else\textemdash\fi} GluonTS documentation}},
+	year = {2020},
+	month = {May},
+	note = {[Online; accessed 8. Feb. 2021]},
+	url = {https://ts.gluon.ai}
+}
+
+@misc{prophet,
+	title = {{Prophet}},
+	journal = {Prophet},
+	year = {2021},
+	month = {Jan},
+	note = {[Online; accessed 8. Feb. 2021]},
+	url = {https://facebook.github.io/prophet}
+}
+
 @misc{sgd, 
   title = {Demystifying Gradient Descent and Backpropagation via Logistic Regression based Image...}, 
   url = {https://www.freecodecamp.org/news/demystifying-gradient-descent-and-backpropagation-via-logistic-regression-based-image-classification-9b5526c2ed46/}, 
